--- a/MultiThreading/MultiThreading.Console/MultiThreading.Console.csproj
+++ b/MultiThreading/MultiThreading.Console/MultiThreading.Console.csproj
@@ -16,7 +16,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
-    <Optimize>true</Optimize>
+    <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
@@ -135,6 +135,7 @@
     <Compile Include="1\TasksArray.cs" />
     <Compile Include="2\TaskChain.cs" />
     <Compile Include="3\Mat.cs" />
+    <Compile Include="4\RecursiveThread.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
