--- a/MultiThreading/MultiThreading.Console/MultiThreading.Console.csproj
+++ b/MultiThreading/MultiThreading.Console/MultiThreading.Console.csproj
@@ -135,7 +135,9 @@
     <Compile Include="1\TasksArray.cs" />
     <Compile Include="2\TaskChain.cs" />
     <Compile Include="3\Mat.cs" />
-    <Compile Include="4\RecursiveThread.cs" />
+    <Compile Include="4_5\RecursiveThread.cs" />
+    <Compile Include="6\ConcurrentReadWrite.cs" />
+    <Compile Include="7\TaskContinuations.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
